lib/misc/ace.pas


      {*
      * System alias which always resolves to the root dictionary
      * defined by ADS_ROOT_DICTIONARY server configuration setting
      *}
      const ADS_ROOT_DD_ALIAS = '__rootdd';

      {* Options for the AdsGetKeyFilter *}
      const ADS_FILTER_FORMAT_ODATA = $00000001;
      const ADS_FILTER_ENCODE_UTF8 = $00000002;
      { The following Management API values can be freely changed by you to fit
        your application's needs.}
      const ADS_LOCK_ARRAY_SIZE = 400;
      const ADS_THREAD_ARRAY_SIZE = 50;
      const ADS_TABLE_ARRAY_SIZE = 200;
      const ADS_INDEX_ARRAY_SIZE = 200;
      const ADS_USER_ARRAY_SIZE = 200;
      const ADS_DD_MAX_LINK_INFO_SIZE = 2 * ADS_DD_MAX_OBJECT_NAME_LEN + ADS_MAX_PATH + 3;


      type
      PAceChar = PAnsiChar;
      AceChar = AnsiChar;

      {$IFDEF ADSDELPHI2008_OR_NEWER}
      const ADS_MAX_FIELD_TYPE = 30;
      type PAceBinary = PByte;
      {$ELSE}
      const ADS_MAX_FIELD_TYPE = 25;
      type PAceBinary = PChar;
      {$ENDIF}

      { This data type defines what type of function to pass to
        AdsRegisterCallbackFunction(). }
      TCallbackFunction = function( usPercent: Word;
                                    ulCallbackID: Longint ): Longint; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

{$IFDEF ADSDELPHI4_OR_NEWER}
      TCallbackFunction101 = function( usPercent: Word;
                                       qCallbackID: Int64 ): Longint; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
{$ENDIF}

      { This data type defines what type of function to pass to
        AdsRegisterProgressCallback(). }
      TProgressCallback = function( usPercent: Word ): Longint; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      { This data type defines what type of function to pass to
        AdsRegisterSQLAbortFunc(). }
      TSQLAbortFunc = function: Longint; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      { This data type defines the type of function that AdsRegisterUDF() takes
        as a parameter.  This should be used to cast the real function, which has
        different parameters.  See the documentation for AdsRegisterUDF for more
        information }
      TUDFFunc = function: Longint; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      { This type allows a numeric field value to be passed into functions
        that expect field names.  If the user prefers to use column number,
        then calls like this can be made:
        ulRet = AdsGetDouble( hTable, ADSFIELD( 1 ), &dVal );
        Where the first column is a numeric value to retrieve. }
      ADSFIELD = PAceChar;

      {$IFNDEF FPC}
         {$IFDEF ADSDELPHIXE2_OR_NEWER}
            AdsNativeInt = NativeInt;    // Architecture-matching (32/64-bit) Signed Int
            AdsNativeUInt = NativeUInt;  // Architecutre-matching (32/64-bit) Unsigned Int
         {$ELSE}
            {*
             * The IDE is pre-Delpih XE2.  No x64, so these will just be 32-bit signed/unsigned integers
             *}
            AdsNativeInt = LongInt;      // 32-bit signed integer
            {$IFDEF ADSDELPHI4_OR_NEWER}
               AdsNativeUInt = LongWord;    // Same as definition for UNSIGNED32 below
            {$ELSE}
               AdsNativeUInt = LongInt;     // Same as definition for UNSIGNED32 below
            {$ENDIF}

         {$ENDIF}
      {$ELSE}
         {*
          * FreePascal already has architecture-matching types.  We'll alias those for consistency.
          *}
         AdsNativeInt = PtrInt;
         AdsNativeUInt = PtrUInt;
      {$ENDIF}

      PAdsNativeInt  = ^AdsNativeInt;
      PAdsNativeUInt = ^AdsNativeUInt;

      { data type definitions }
      ADSHANDLE      = AdsNativeUInt;

      {*      * With data dicitonaries it is possible for a table to have more than
      * fifty index tags.  If you need more than fifty tags you will
      * need to declare a new array with a larger size.
      *}
      ADSIndexArray  = array[0..ADS_MAX_TAGS - 1] of ADSHANDLE;
      PADSIndexArray = ^ADSIndexArray;
      PADSHANDLE     = ^ADSHANDLE;
{$IFNDEF FPC}
      PDOUBLE        = ^Double;
      PWord          = ^Word;
{$ENDIF}
      SIGNED16       = SmallInt;
      PSIGNED16      = ^SmallInt;
      UNSIGNED16     = Word;
      PUNSIGNED16    = ^Word;
      SIGNED32       = Longint;
      PSIGNED32      = ^SIGNED32;
      {$IFDEF ADSDELPHI4_OR_NEWER }
      SIGNED64       = Int64;
      PSIGNED64      = ^SIGNED64;
      {$ENDIF}
      {$IFDEF ADSDELPHI2007_OR_NEWER }
      UNSIGNED64     = UInt64;
      {$ELSE}
      UNSIGNED64     = Int64;
      {$ENDIF}
      PUNSIGNED64    = ^UNSIGNED64;
      {$IFDEF ADSDELPHI4_OR_NEWER }
      UNSIGNED32     = LongWord;
      {$ELSE}
      UNSIGNED32     = Longint;
      {$ENDIF}
      PUNSIGNED32    = ^UNSIGNED32;
      SIGNED8        = BYTE;
      UNSIGNED8      = BYTE;
{$IFNDEF FPC}
      pPChar         = ^PAceChar;
      pPWideChar     = ^PWideChar;
{$ENDIF}

      {*
      * Management API structures
      *}
      ADS_MGMT_COMM_STATS = packed record
         dPercentCheckSums:   double;   { 0f pkts with checksum failures }
         ulTotalPackets:   UNSIGNED32;   { Total packets received }
         ulRcvPktOutOfSeq:   UNSIGNED32;   { Receive packets out of sequence }
         ulNotLoggedIn:   UNSIGNED32;   { Packet owner not logged in }
         ulRcvReqOutOfSeq:   UNSIGNED32;   { Receive requests out of sequence }
         ulCheckSumFailures:   UNSIGNED32;   { Checksum failures }
         ulDisconnectedUsers:   UNSIGNED32;   { Server initiated disconnects }
         ulPartialConnects:   UNSIGNED32;   { Removed partial connections }
         ulInvalidPackets:   UNSIGNED32;   { Rcvd invalid packets (NT only) }
         ulRecvFromErrors:   UNSIGNED32;   { RecvFrom failed (NT only) }
         ulSendToErrors:   UNSIGNED32;   { SendTo failed (NT only) }
      end;

      pADS_MGMT_COMM_STATS = ^ADS_MGMT_COMM_STATS;

      ADS_MGMT_CONFIG_PARAMS = packed record
         ulNumConnections:   UNSIGNED32;   { number connections }
         ulNumWorkAreas:   UNSIGNED32;   { number work areas }
         ulNumTables:   UNSIGNED32;   { number tables }
         ulNumIndexes:   UNSIGNED32;   { number indexes }
         ulNumLocks:   UNSIGNED32;   { number locks }
         ulUserBufferSize:   UNSIGNED32;   { user buffer }
         ulStatDumpInterval:   UNSIGNED32;   { statistics dump interval }
         ulErrorLogMax:   UNSIGNED32;   { max size of error log }
         ulNumTPSHeaderElems:   UNSIGNED32;   { number TPS header elems }
         ulNumTPSVisibilityElems:   UNSIGNED32;   { number TPS vis elems }
         ulNumTPSMemoTransElems:   UNSIGNED32;   { number TPS memo elems }
         usNumRcvECBs: UNSIGNED16;   { number rcv ECBs (NLM only) }
         usNumSendECBs:   UNSIGNED16;   { number send ECBs (NLM only) }
         usNumBurstPackets:   UNSIGNED16;   { number packets per burst }
         usNumWorkerThreads:   UNSIGNED16;   { number worker threads }
         ulSortBuffSize:   UNSIGNED32;   { index sort buffer size }
         aucErrorLog:    array[0..ADS_MAX_CFG_PATH - 1] of AceChar;   { error log path }
         aucSemaphore:    array[0..ADS_MAX_CFG_PATH - 1] of AceChar;   { semaphore file path }
         aucTransaction:    array[0..ADS_MAX_CFG_PATH - 1] of AceChar;   { TPS log file path }

         ucReserved3:   UNSIGNED8;   { reserved }
         ucReserved4:   UNSIGNED8;   { reserved }
         usSendIPPort:   UNSIGNED16;   { NT Service IP send port # }
         usReceiveIPPort:   UNSIGNED16;   { NT Service IP rcv port # }
         ucUseIPProtocol:   UNSIGNED8;   { Win9x only. Which protocol to use }
         ucFlushEveryUpdate:   UNSIGNED8;   { Win9x specific }

         ulGhostTimeout:   UNSIGNED32;   { Diconnection time for partial connections }
         ulFlushFrequency:   UNSIGNED32;   { For local server only }

         ulKeepAliveTimeOut:   UNSIGNED32;   { When not using semaophore files. In milliseconds }
         ucDisplayNWLoginNames:   UNSIGNED8;   { Display connections using user names. }
         ucUseSemaphoreFiles:   UNSIGNED8;   { Whether or not to use semaphore files }
         ucUseDynamicAOFs:   UNSIGNED8;
         ucUseInternet:   UNSIGNED8;   { 0 if an Internet port is not specified. }

         usInternetPort:   UNSIGNED16;   { Internet Port }
         usMaxConnFailures:   UNSIGNED16;   { Maximum Internet connection failures allowed. }
         ulInternetKeepAlive:   UNSIGNED32;   { In Milliseconds }

         usCompressionLevel:   UNSIGNED16;   {  Compression option at server.  ADS_COMPRESS_NEVER, }
                                          { ADS_COMPRESS_INTERNET, or ADS_COMPRESS_ALWAYS }
         ulNumQueries:   UNSIGNED32;   { number of queries }
         usReceiveSSLPort:   UNSIGNED16;   { Port number used for SSL }

      end;

      pADS_MGMT_CONFIG_PARAMS = ^ADS_MGMT_CONFIG_PARAMS;

      ADS_MGMT_CONFIG_MEMORY = packed record
         ulTotalConfigMem:   UNSIGNED32;   { Total mem taken by cfg params }
         ulConnectionMem:   UNSIGNED32;   { memory taken by connections }
         ulWorkAreaMem:   UNSIGNED32;   { memory taken by work areas }
         ulTableMem:   UNSIGNED32;   { memory taken by tables }
         ulIndexMem:   UNSIGNED32;   { memory taken by indexes }
         ulLockMem:   UNSIGNED32;   { memory taken by locks }
         ulUserBufferMem:   UNSIGNED32;   { memory taken by user buffer }
         ulTPSHeaderElemMem:   UNSIGNED32;   { memory taken by TPS hdr elems }
         ulTPSVisibilityElemMem:   UNSIGNED32;   { memory taken by TPS vis elems }
         ulTPSMemoTransElemMem:   UNSIGNED32;   { mem taken by TPS memo elems }
         ulRcvEcbMem: UNSIGNED32;   { mem taken by rcv ECBs (NLM) }
         ulSendEcbMem:   UNSIGNED32;   { mem taken by send ECBs (NLM) }
         ulWorkerThreadMem:   UNSIGNED32;   { mem taken by worker threads }
         ulQueryMem:   UNSIGNED32;   { mem taken by queries }
      end;

      pADS_MGMT_CONFIG_MEMORY = ^ADS_MGMT_CONFIG_MEMORY;

      ADS_MGMT_INSTALL_INFO = packed record
         ulUserOption:   UNSIGNED32;   { User option purchased }
         aucRegisteredOwner:    array[0..ADS_REG_OWNER_LEN - 1] of AceChar;   { Registered owner }
         aucVersionStr:    array[0..ADS_REVISION_LEN - 1] of AceChar;   { Advantage version }
         aucInstallDate:    array[0..ADS_INST_DATE_LEN - 1] of AceChar;   { Install date string }
         aucOemCharName:    array[0..ADS_OEM_CHAR_NAME_LEN - 1] of AceChar;   { OEM char language }
         aucAnsiCharName:    array[0..ADS_ANSI_CHAR_NAME_LEN - 1] of AceChar;   { ANSI char language }
         aucEvalExpireDate:    array[0..ADS_INST_DATE_LEN - 1] of AceChar;   { Eval expiration date }
         aucSerialNumber:    array[0..ADS_SERIAL_NUM_LEN - 1] of AceChar;   { Serial number string }
         ulMaxStatefulUsers:   UNSIGNED32;   { How many stateful connections allowed }
         ulMaxStatelessUsers:   UNSIGNED32;   { How many stateless connections allowed }
      end;

      pADS_MGMT_INSTALL_INFO = ^ADS_MGMT_INSTALL_INFO;

      ADS_MGMT_UPTIME_INFO = packed record
         usDays:   UNSIGNED16;   { Number of days server has been up }
         usHours:   UNSIGNED16;   { Number of hours server has been up }
         usMinutes:   UNSIGNED16;   { Number of minutes server has been up }
         usSeconds:   UNSIGNED16;   { Number of seconds server has been up }
      end;

      pADS_MGMT_UPTIME_INFO = ^ADS_MGMT_UPTIME_INFO;

      ADS_MGMT_USAGE_INFO = packed record
         ulInUse:   UNSIGNED32;   { Number of items in use }
         ulMaxUsed:   UNSIGNED32;   { Max number of items ever used }
         ulRejected:   UNSIGNED32;   { Number of items rejected }
      end;

      pADS_MGMT_USAGE_INFO = ^ADS_MGMT_USAGE_INFO;
